--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,13 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.0.v20161208'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.0.v20161208'
+
+
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.6.Final'
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'
+
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.14'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.22'
     compile group: 'com.google.guava', name:'guava', version: '20.0'
